# ckanext-advancedauth

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: CI.yml
ckanext/advancedauth/: auditdata.py  auth.py  blueprint.py  captcha.py  click.py  command.py  helpers.py  logic.py  middleware.py  model.py  plugin.py  validators.py
ckanext/advancedauth/templates/user/: edit_user_form.html  new_user_form.html  perform_reset.html  read_base.html  request_reset.html  required_reset.html
ckanext/advancedauth/templates/user/snippets/: inline_dua.html  inline_privacy_policy.html  login_form.html
ckanext/advancedauth/tests/: test_plugin.py
docs/source/: conf.py  index.md
